# SpeechtToText

./: README.md
tauri-app/: .gitignore  README.md  package-lock.json  package.json
tauri-app/src/: App.css  App.jsx  languages.js
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: deepgram_proxy.rs  main.rs
